--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "ant-design-vue": "^2.0.0-beta.13",
         "await-sleep": "0.0.1",
         "babel-preset-es2015": "^6.24.1",
+        "crypto-es": "^1.2.7",
         "egg-http-proxy": "^1.0.1",
         "element-ui": "^2.13.2",
         "fs": "0.0.1-security",
